--- a/src/sample/View/modifyCustomer.fxml
+++ b/src/sample/View/modifyCustomer.fxml
@@ -22,7 +22,7 @@
         <TextField fx:id="ModifyCustomerIDBox" disable="true" layoutX="95.0" layoutY="85.0" />
         <TextField fx:id="ModifyCustomerNameBox" layoutX="95.0" layoutY="125.0" />
         <TextField fx:id="ModifyCustomerPhoneBox" layoutX="95.0" layoutY="165.0" />
-        <ComboBox fx:id="ModifyCustomerCountryCombo" layoutX="95.0" layoutY="205.0" prefWidth="150.0" />
+        <ComboBox fx:id="ModifyCustomerCountryCombo" layoutX="95.0" layoutY="205.0" onAction="#onModifyCustomerCountryComboAction" prefWidth="150.0" />
         <TextField fx:id="ModifyCustomerPostalBox" layoutX="95.0" layoutY="245.0" />
         <ComboBox fx:id="ModifyCustomerStateCombo" layoutX="95.0" layoutY="285.0" prefWidth="150.0" />
         <TextField fx:id="ModifyCustomerCityBox" layoutX="95.0" layoutY="325.0" />
