--- a/src/sample/View/mainForm.fxml
+++ b/src/sample/View/mainForm.fxml
@@ -86,7 +86,7 @@
                                  </toggleGroup>
                               </RadioButton>
                               <RadioButton fx:id="appointmentsMonthlyRadio" layoutX="289.0" layoutY="26.0" mnemonicParsing="false" onAction="#onAppointmentsMonthlyRadioAction" text="Month" toggleGroup="$WeekOrMonth" />
-                              <DatePicker fx:id="WeekOrMonthSelect" editable="false" layoutX="352.0" layoutY="22.0" onAction="#onWeekOrMonthSelectAction" prefHeight="25.0" prefWidth="110.0" promptText="Date Filter" showWeekNumbers="true" />
+                              <DatePicker fx:id="WeekOrMonthSelect" editable="false" layoutX="352.0" layoutY="22.0" onAction="#onWeekOrMonthSelectAction" prefHeight="25.0" prefWidth="112.0" promptText="Week/Month" showWeekNumbers="true" />
                               <RadioButton fx:id="appointmentsNoFilterRadio" layoutX="178.0" layoutY="6.0" mnemonicParsing="false" onAction="#onAppointmentsNoFilterRadioAction" selected="true" text="Ignore Date Filter" toggleGroup="$WeekOrMonth" />
                               <Label fx:id="timeZoneLabel" layoutX="686.0" layoutY="26.0" text="TimeZone" />
                               </children>
