--- a/src/sample/loginForm.fxml
+++ b/src/sample/loginForm.fxml
@@ -19,7 +19,7 @@
         <Button fx:id="confirmButton" layoutX="26.0" layoutY="548.0" mnemonicParsing="false" onAction="#onConfirmButtonAction" text="Yes" visible="false" />
         <Button fx:id="denyButton" layoutX="69.0" layoutY="548.0" mnemonicParsing="false" onAction="#onDenyButtonAction" text="No" visible="false" />
       <TextField fx:id="usernameTextbox" layoutX="182.0" layoutY="145.0" />
-      <TextField fx:id="passwordTextbox" layoutX="182.0" layoutY="212.0" />
+      <PasswordField fx:id="passwordTextbox" layoutX="182.0" layoutY="212.0" />
       <Label fx:id="usernameLabel" layoutX="59.0" layoutY="149.0" text="Username" />
       <Label fx:id="passwordLabel" layoutX="61.0" layoutY="216.0" text="Password" />
       <Label fx:id="ZoneIDLabel" layoutX="44.0" layoutY="300.0" text="ZoneID" wrapText="true">
